@@ -107,6 +107,8 @@ atmega169
 .br
 atmega16hva (\fBo\fP)
 .br
+atmega16m1 (\fBo\fP) (\fB+\fP)
+.br
 atmega2560 (\fBo\fP)
 .br
 atmega2561 (\fBo\fP)
@@ -164,6 +166,10 @@ atmega6450 (\fBo\fP)
 atmega649 (\fBo\fP)
 .br
 atmega6490 (\fBo\fP)
+.br
+atmega64c1 (\fBo\fP) (\fB+\fP)
+.br
+atmega64m1 (\fBo\fP) (\fB+\fP)
 .br
 atmega88 (\fBo\fP) (\fB+\fP)
 .br
