@@ -1,8 +1,15 @@
+2012-11-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* src/devdescr.cc: Added megaM1 and megaC1 device: ATmega16M1,
+	ATmega64M1, ATmega64C1
+	* doc/avarice.1: Document new devices.
+
 2012-07-31  Canyon Bliss  <canyon@recursivebliss.com>
 
 	* doc/avarice.1: Updated list of devices.
 	* src/devdescr.cc: Added xmegaB devices: ATxmega128B1, ATxmega128B3, 
 	ATxmega64B1, ATxmega64B3.
+
 2012-01-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* configure.ac: Add a test whether libbfd requires libdl; fix
